# EUROBOT_2025

./: .gitignore  Dockerfile  Makefile  README.md  cyclonedds.xml  docker-compose.yaml  pyproject.toml  run.sh  test.ipynb
Platform/URDF/Maket/: CMakeLists.txt  package.xml
Platform/URDF/Макет/: CMakeLists.txt  package.xml
Platform/URDF/Макет v2/: CMakeLists.txt  package.xml
Platform/Xacro/: Master.xacro  Slave.xacro  Xacro_Slave.xml  Xacro_main.xml  descriptions.xacro  inertials.xacro  robot.urdf
camera/: Dockerfile  package.xml  run.sh
camera/src/camera/: package.xml  setup.py
camera/src/camera_/: setup.py
camera/src/cpp_pubsub/: CMakeLists.txt
camera/src/description/: CMakeLists.txt
camera/src/lidar/: CMakeLists.txt
camera/src/navigation/: CMakeLists.txt
camera/src/navigation/config/: navigation.yaml
camera/src/navigation/launch/: slam.launch.py
camera/src/navigation/map/: playground.yaml
docker/: Dockerfile  docker-compose.yaml  run.sh
lidar/: package.xml
log/: latest_build
old_/: camera_test.py
old_ copy/src/camera_/: CMakeLists.txt
old_/src/camera/: CMakeLists.txt  package.xml
rpi_launch/: rpi4_launch.sh
rpi_launch/src/custom_msg/: CMakeLists.txt  package.xml
rpi_launch/src/middleware/: CMakeLists.txt  package.xml
rpi_launch/src/servo_control/: package.xml  setup.py
script/: camera_calibration.py  charuco_board_calibration.json  charuco_board_calibration_new.json  cv_functions.py  data.json  data_fisheye.json  rpi4_launch.sh  topview_camera.py
script/calibration/: cv_functions.py  data_wa.json  data_web.json  fisheye_calibration.py  fisheye_calibration_data.json
script/calibration/camera_calibration/: camera_calibration.py
script/create_map/: MiDas.ipynb  nav_map.py
script/imu_calibration/: calibration.py  imu_init.py  set_direction.py
script/waveshare_servo_control/script_example/: arduino_connect.py  test_servo.py
src/camera/: setup.py
src/camera/camera/: position.py
src/camera/rviz_cfg/: eurobot.rviz
src/cpp_pubsub/: package.xml
src/description/: CMakeLists.txt  package.xml
src/description/launch/: construct.launch.py
src/description/meshes/: Roller.stl
src/description/urdf/: Master.xacro  (+2 more)
src/navigation/: package.xml
src/robot_base/: package.xml
src/robot_bringup/: CMakeLists.txt  package.xml
src/ros2/navigation/: package.xml
src/ros2/navigation/config/: navigation.yaml  slam.yaml
src/ros2/navigation/config/bt/: behavior_tree.xml  bt_throught_poses.xml  bt_to_pose.xml
src/ros2/navigation/launch/: navigation.launch.py
src/ros2/navigation/map/: battlefield.pgm  battlefield.yaml  house_world_map.yaml  map.yaml  map_only_borders.pgm  map_only_borders.yaml  playground.yaml
src/test_pkg/: package.xml
(+115 files in other folders)
