[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_functions"
version = "1.0.0"
description = "CV operations for robot pose detection"
authors = [
    { name = "Timur Manshin", email = "TManshin@yandex.com" }
]
maintainers = [
    { name = "Timur Manshin", email = "TManshin@yandex.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.10.0.84"
]
readme = "README.md"
