<?xml version="1.0"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>Navigation package for EUROBOT</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>   <!-- Для запуска bringup_launch.py -->
  <depend>map_creation</depend>   <!-- Для запуска map_creator_launch.py -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>